--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"classnames": "^2.5.1",
 		"date-fns": "^3.3.1",
 		"framer-motion": "^11.13.1",
+		"motion": "^11.13.1",
 		"next": "14.1.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-icons": "^5.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
