--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^5.4.0"
+		"react-icons": "^5.4.0",
+		"react-toastify": "^10.0.6",
+		"resend": "^4.0.1"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
