--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install step
         run: "npm install"
 
+      - name: Clean build directory
+        run: npm run clean
+
       - name: Build step
         run: "npm run build"
 
