--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@next/third-parties": "^15.0.4",
 		"@nextui-org/react": "^2.6.3",
 		"classnames": "^2.5.1",
+		"client-only": "^0.0.1",
 		"date-fns": "^3.3.1",
 		"framer-motion": "^11.13.1",
 		"motion": "^11.13.1",
-		"next": "14.1.0",
+		"next": "^15.0.4",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.4.0",
@@ -20,6 +22,7 @@
 		"resend": "^4.0.1"
 	},
 	"devDependencies": {
+		"@types/gtag.js": "^0.0.20",
 		"@types/node": "^20",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
