--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-	"private": true,
-	"scripts": {
-		"dev": "next",
-		"clean": "rimraf .next",
-		"build": "next build",
-		"start": "next start"
-	},
-	"dependencies": {
-		"@next/third-parties": "^15.0.4",
-		"@nextui-org/react": "^2.6.3",
-		"classnames": "^2.5.1",
-		"client-only": "^0.0.1",
-		"date-fns": "^3.3.1",
-		"framer-motion": "^11.13.1",
-		"motion": "^11.13.1",
-		"next": "^15.0.4",
-		"react": "^18",
-		"react-dom": "^18",
-		"react-icons": "^5.4.0",
-		"react-toastify": "^10.0.6",
-		"resend": "^4.0.1"
-	},
-	"devDependencies": {
-		"@types/gtag.js": "^0.0.20",
-		"@types/node": "^20",
-		"@types/react": "^19.0.1",
-		"@types/react-dom": "^19.0.1",
-		"autoprefixer": "^10.0.1",
-		"postcss": "^8",
-		"rimraf": "^6.0.1",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
-	}
+  "private": true,
+  "scripts": {
+    "dev": "next",
+    "clean": "rimraf .next",
+    "build": "next build",
+    "start": "next start",
+    "prettier": "prettier --write ."
+  },
+  "dependencies": {
+    "@next/third-parties": "^15.0.4",
+    "@nextui-org/react": "^2.6.3",
+    "classnames": "^2.5.1",
+    "client-only": "^0.0.1",
+    "date-fns": "^3.3.1",
+    "eslint-config-next": "^15.0.4",
+    "framer-motion": "^11.13.1",
+    "motion": "^11.13.1",
+    "next": "^15.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.4.0",
+    "react-toastify": "^10.0.6",
+    "resend": "^4.0.1"
+  },
+  "devDependencies": {
+    "@types/gtag.js": "^0.0.20",
+    "@types/node": "^20",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
 }
