--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,9 +1,10 @@
-name: Deploy
+name: DEV-Deploy
 on:
   push:
-    branches: main
+    branches: dev
   pull_request:
-    branches: main
+    branches: dev
+  workflow_dispatch:
 
 jobs:
   deploy:
