--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.5.1",
     "client-only": "^0.0.1",
     "date-fns": "^3.3.1",
+    "eslint-config-antife": "^3.0.0",
     "eslint-config-next": "^15.0.4",
     "framer-motion": "^11.13.1",
     "motion": "^11.13.1",
