--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,10 +1,12 @@
 name: DEV-Deploy
 on:
   push:
-    branches: dev
+    branches: 
+      - dev
   pull_request:
-    branches: dev
-  workflow_dispatch:
+    branches: 
+      - dev
+  workflow_dispatch: # Esto habilita el disparo manual sin restricciones
 
 jobs:
   deploy:
@@ -21,7 +23,7 @@ jobs:
           node-version: lts/*
 
       - name: Install step
-        run: "npm install"
+        run: npm install
 
       - name: Build step
-        run: "npm run build"
+        run: npm run build
