--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^11.13.1",
     "next": "^15.0.4",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6",
