--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: lts/*
 
       - name: Install react email
-        run: cd react-email-starter && npm i 
+        run: cd react-email-starter && npm i && npm run build
 
       - name: Install step
         run: "npm install"
