--- a/react-email-starter/package.json
+++ b/react-email-starter/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@react-email/components": "0.0.31",
+    "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react": "19.0.0"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "19.0.1",
