--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
 	"dependencies": {
 		"@next/third-parties": "^15.0.4",
 		"@nextui-org/react": "^2.6.3",
+		"@react-email/render": "^1.0.3",
 		"classnames": "^2.5.1",
 		"client-only": "^0.0.1",
 		"date-fns": "^3.3.1",
 		"eslint-config-antife": "^3.0.0",
 		"eslint-config-next": "^15.0.4",
+		"form-data": "^4.0.1",
 		"framer-motion": "^11.13.1",
+		"i": "^0.3.7",
+		"mailgun.js": "^10.4.0",
 		"motion": "^11.13.1",
 		"next": "^15.0.4",
+		"npm": "^11.0.0",
 		"react": "^18",
 		"react-confetti": "^6.1.0",
 		"react-dom": "^18",
 		"react-icons": "^5.4.0",
-		"react-toastify": "^10.0.6",
-		"resend": "^4.0.1"
+		"react-toastify": "^10.0.6"
 	},
 	"devDependencies": {
 		"@types/gtag.js": "^0.0.20",
